manifests/kiali/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
spec:
  parentRefs:
    - name: trial-studio-gateway
      namespace: istio-system
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - kiali.trial.studio
  rules:
    - backendRefs:
        - name: kiali
          port: 20001
          group: ""
          kind: Service
